--- a/libyaul/Makefile
+++ b/libyaul/Makefile
@@ -176,6 +176,7 @@ LIB_SRCS+= \
 	scu/bus/b/vdp2/vdp2_scrn_back_screen_addr_set.c \
 	scu/bus/b/vdp2/vdp2_scrn_back_screen_color_set.c \
 	scu/bus/b/vdp2/vdp2_scrn_bitmap_format_set.c \
+	scu/bus/b/vdp2/vdp2_scrn_cell_format_get.c \
 	scu/bus/b/vdp2/vdp2_scrn_cell_format_set.c \
 	scu/bus/b/vdp2/vdp2_scrn_color_offset_clear.c \
 	scu/bus/b/vdp2/vdp2_scrn_color_offset_rgb_set.c \
