--- a/examples/simple/nbgs/Makefile
+++ b/examples/simple/nbgs/Makefile
@@ -19,7 +19,7 @@ IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
 
-M68K_PROGRAM:= out.m68k
-M68K_OBJECTS:= out.m68k.o
+M68K_PROGRAM:= 
+M68K_OBJECTS:=
 
 include $(INSTALL_ROOT)/share/post.common.mk
