--- a/examples/simple/arp-comm/Makefile
+++ b/examples/simple/arp-comm/Makefile
@@ -4,7 +4,8 @@ endif
 
 include $(INSTALL_ROOT)/share/pre.common.mk
 
-PROJECT:= arp-comm
+SH_PROGRAM:= arp-comm
+SH_OBJECTS:= arp-comm.o
 
 IP_VERSION:= V1.000
 IP_RELEASE_DATE:= 20160101
@@ -15,6 +16,8 @@ IP_MASTER_STACK_ADDR:= 0x06100000
 IP_SLAVE_STACK_ADDR:= 0x00000000
 IP_1ST_READ_ADDR:= 0x06004000
 
-SH_OBJECTS:= arp-comm.o
-
 include $(INSTALL_ROOT)/share/post.common.mk
+
+ifneq ($(strip $(OPTION_DEV_CARTRIDGE)),2)
+  $(error Wrong development cartridge value (see `OPTION_DEV_CARTRIDGE'))
+endif
