--- a/libtga/Makefile
+++ b/libtga/Makefile
@@ -79,7 +79,7 @@ DEPS_release:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/release/,$(DEPS))
 DEPS_release-internal:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/release-internal/,$(DEPS))
 DEPS_debug:= $(addprefix $(BUILD_ROOT)/$(SUB_BUILD)/debug/,$(DEPS))
 
-HEADER_FILES_all:= $(addprefix $(BUILD_ROOT)/lib$(TARGET)/,$(HEADER_FILES))
+HEADER_FILES_all:= $(addprefix $(THIS_ROOT)/lib$(TARGET)/,$(HEADER_FILES))
 
 define macro-build-object
 	@printf -- "$(V_BEGIN_YELLOW)$(shell v="$@"; printf -- "$${v#$(BUILD_ROOT)/}")$(V_END)\n"
@@ -98,9 +98,9 @@ define macro-install-files
 	$(ECHO)$(RM) -r $(INSTALL_ROOT)/sh-elf/sh-elf/include/$(TARGET)
 	$(ECHO)mkdir -p $(INSTALL_ROOT)/sh-elf/sh-elf/include/$(TARGET)
 	$(ECHO)for header_file in $(HEADER_FILES_all); do \
-	    path="$(INSTALL_ROOT)/sh-elf/sh-elf/include/$(TARGET)/$${header_file#$(BUILD_ROOT)/lib$(TARGET)/}"; \
+	    path="$(INSTALL_ROOT)/sh-elf/sh-elf/include/$(TARGET)/$${header_file#$(THIS_ROOT)/lib$(TARGET)/}"; \
 	    install_header_file=$$(python -c "import os; print os.path.abspath(\"$${path}\")"); \
-	    printf -- "$(V_BEGIN_BLUE)$${header_file#$(BUILD_ROOT)/}$(V_END)\n"; \
+	    printf -- "$(V_BEGIN_BLUE)$${header_file#$(THIS_ROOT)/}$(V_END)\n"; \
 	    $(INSTALL) -m 644 $${header_file} $${install_header_file}; \
 	done
 endef
