--- a/tools/ssload/Makefile
+++ b/tools/ssload/Makefile
@@ -1,39 +1,8 @@
 TARGET:= ssload
 
-ifeq ($(strip $(INSTALL_ROOT)),)
-  $(error Undefined INSTALL_ROOT (install root directory))
-endif
-
-ifeq ($(strip $(BUILD_ROOT)),)
-  $(error Undefined BUILD_ROOT (build root directory))
-endif
-
-ifeq ($(strip $(BUILD)),)
-  $(error Undefined BUILD (build directory))
-endif
-
-ifeq ($(strip $(SILENT)),1)
-  ECHO=@
-else
-  ECHO=
-endif
-export ECHO
+include ../../env.mk
 
 SUB_BUILD:=$(BUILD)/tools/$(TARGET)
-
-V_BEGIN_BLACK= [1;30m
-V_BEGIN_RED= [1;31m
-V_BEGIN_GREEN= [1;32m
-V_BEGIN_YELLOW= [1;33m
-V_BEGIN_BLUE= [1;34m
-V_BEGIN_MAGENTA= [1;35m
-V_BEGIN_CYAN= [1;36m
-V_BEGIN_WHITE= [1;37m
-V_END= [m
-
-INSTALL:= install
-SED:= sed
-STRIP:= strip
 
 CFLAGS:= -O2 \
 	-s \
