--- a/tools/Makefile
+++ b/tools/Makefile
@@ -5,16 +5,7 @@ PROJECTS:= \
 	genromfs \
 	make-iso
 
-ifeq ($(strip $(INSTALL_ROOT)),)
-  $(error Undefined INSTALL_ROOT (install root directory))
-endif
-
-ifeq ($(strip $(SILENT)),1)
-  ECHO=@
-else
-  ECHO=
-endif
-export ECHO
+include ../env.mk
 
 # Build ssload only if we have a development cartridge to use
 ifneq ($(strip $(OPTION_DEV_CARTRIDGE)),0)
@@ -27,6 +18,6 @@ endif
 all clean distclean install:
 	$(ECHO)mkdir -p $(BUILD_ROOT)/$(BUILD)
 	$(ECHO)for tool in $(PROJECTS); do \
-		printf -- "[1;36m$@[m [1;32mtools/$$tool[m\n"; \
+		printf -- "$(V_BEGIN_CYAN)$@$(V_END) $(V_BEGIN_GREEN)tools/$$tool$(V_END)\n"; \
 		($(MAKE) -C $$tool $@) || exit $$?; \
 	done
