--- a/tools/bin2o/Makefile
+++ b/tools/bin2o/Makefile
@@ -1,27 +1,6 @@
-ifeq ($(strip $(INSTALL_ROOT)),)
-  $(error Undefined INSTALL_ROOT (install root directory))
-endif
-
-ifeq ($(strip $(SILENT)),1)
-  ECHO=@
-else
-  ECHO=
-endif
-export ECHO
-
 TARGET:= bin2o
 
-V_BEGIN_BLACK= [1;30m
-V_BEGIN_RED= [1;31m
-V_BEGIN_GREEN= [1;32m
-V_BEGIN_YELLOW= [1;33m
-V_BEGIN_BLUE= [1;34m
-V_BEGIN_MAGENTA= [1;35m
-V_BEGIN_CYAN= [1;36m
-V_BEGIN_WHITE= [1;37m
-V_END= [m
-
-INSTALL:= install
+include ../../env.mk
 
 .PHONY: all clean distclean install
 
