Fix spelling error in comment

--- a/yaul.env.in
+++ b/yaul.env.in
@@ -11,7 +11,7 @@
 # 'm68k-elf' cross-compilers are installed
 export INSTALL_ROOT=${HOME}/tool-chains
 
-# Path to where the build is to ba located
+# Path to where the build is to be located
 export BUILD_ROOT=${HOME}/work/libyaul
 
 # Name of build directory
