Use freestanding environment

--- a/libtga/Makefile
+++ b/libtga/Makefile
@@ -12,6 +12,7 @@ HEADER_FILES:= \
 SH_CFLAGS:= -std=c99 \
 	-s \
 	-ffast-math \
+	-ffreestanding \
 	-fstrict-aliasing \
 	-fomit-frame-pointer \
 	-Wall \
